--- a/component/Weather.module.scss
+++ b/component/Weather.module.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     max-width: 500px;
     width: 100%;
-    height: 90vh;
+    // height: 90vh;
     margin: auto;
     padding: 16px;
     color: white;
@@ -26,6 +26,6 @@
     font-weight: 600;
 }
 .pp{
-    font-size: 6rem;
+    font-size: 7rem;
     font-weight: 600;
 }
