--- a/component/Weather.module.scss
+++ b/component/Weather.module.scss
@@ -29,3 +29,34 @@
     font-size: 7rem;
     font-weight: 600;
 }
+.table{
+    background-color: rgb(0, 0, 0, 0.5);
+    position: relative;
+    padding: 32px;
+    border-radius: 6px;
+}
+.first{
+    font-size: 1.5rem;
+    font-weight: 600;
+    line-height: 32px;
+    color: white;
+    text-align: center;
+    padding-bottom: 24px;
+    
+}
+.inf{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+.secondary {
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 32px;
+
+}
+.theardly{
+    font-size: 1rem;
+    line-height: 32px;
+    font-weight: 600;
+}
