--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,4 @@
-@import "./_mixins.scss";
+@import './_mixins.scss';
 
 html,
 body,
@@ -81,12 +81,12 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -100,74 +100,74 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+	display: block;
 }
 body {
-  line-height: 1;
+	line-height: 1;
 }
 ol,
 ul {
-  list-style: none;
+	list-style: none;
 }
 blockquote,
 q {
-  quotes: none;
+	quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
-  content: none;
+	content: '';
+	content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
 .container {
-  margin-left: auto;
-  margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 
-  padding: 0 20px;
+	padding: 0 20px;
 }
 @media screen and (min-width: 768px) {
-  .container {
-    padding: 0 32px;
-  }
+	.container {
+		padding: 0 32px;
+	}
 }
 
 div.lb-dataContainer {
-  padding-top: 10px;
+	padding-top: 10px;
 }
 
 .main {
-  background-color: #d5d5d5;
-  min-height: 100vh;
-  //! padding-left: 94px; этот
+	background-color: #d5d5d5;
+	min-height: 100vh;
+	//! padding-left: 94px; этот
 }
 
 .boxChart {
-  padding: 16px;
-  display: grid;
-  gap: 16px;
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+	padding: 16px;
+	display: grid;
+	gap: 16px;
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 
-  @include media("tablet") {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
+	@include media('tablet') {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
 }
 
 /* :root {
