--- a/component/Weather.module.scss
+++ b/component/Weather.module.scss
@@ -9,6 +9,7 @@
     margin: auto;
     padding: 16px;
     color: white;
+    z-index: 2;
 }
 .top {
     position: relative;
@@ -34,6 +35,7 @@
     position: relative;
     padding: 32px;
     border-radius: 6px;
+    margin-top: 48px;
 }
 .first{
     font-size: 1.5rem;
